<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green14"
    android:elevation="6dp"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_home"
            android:gravity="center"
            android:text="@string/widget_home"
            android:textColor="@color/primary_dark_material_light" />

        <TextView
            android:id="@+id/widget_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_home_text"
            android:gravity="center"
            android:textColor="@color/primary_material_dark"
            android:textSize="@dimen/widget_team"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/widget_home_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_home_img" />

    </LinearLayout>

    <TextView
        android:id="@+id/widget_score"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/primary_material_dark"
        android:textSize="@dimen/Score"
        android:contentDescription="@string/cd_score" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_away"
            android:gravity="center"
            android:text="@string/widget_away"
            android:textColor="@color/primary_dark_material_light" />

        <TextView
            android:id="@+id/widget_away_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_away_text"
            android:gravity="center"
            android:textColor="@color/primary_material_dark"
            android:textSize="@dimen/widget_team"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/widget_away_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_away_img" />

    </LinearLayout>

</LinearLayout>
