<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League"
            android:contentDescription="@string/cd_league" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League"
            android:contentDescription="@string/cd_match_day" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <!--Adding PaddingStart to this button generates this issue:
        https://code.google.com/p/android/issues/detail?id=60055
        Fixed with this workaround:
        https://gist.github.com/imminent/858a47904786aa2f4360
        (This shouldn't be a problem though, because the r/l padding is the same here) -->
        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:drawableStart="@android:drawable/ic_menu_share"
            android:gravity="center"
            android:paddingLeft="@dimen/sharePaddingLeft"
            android:paddingRight="@dimen/sharePaddingRight"
            android:text="@string/share_text"
            android:contentDescription="@string/cd_share" />
    </FrameLayout>

</LinearLayout>